examples/errors/runtime_undefined_var_when.jc
// ================================================
// ERROR: Undefined Variable in When Condition
// Expected: Runtime Error: Undefined variable 'status'
// ================================================

// Using an undefined variable in a when condition
when (status) {
    say("Active");
}
